--- a/case_study/furama/index.html
+++ b/case_study/furama/index.html
@@ -55,7 +55,7 @@
                                                 <li><a href="elements.html">elements</a></li>
                                             </ul>
                                         </li>
-                                        <li><a href="contact.html">Contact</a></li>
+                                        <li><a href="contact.html">contract</a></li>
                                     </ul>
                                 </nav>
                             </div>
