--- a/case_study/furama/index.html
+++ b/case_study/furama/index.html
@@ -25,6 +25,30 @@
     <link rel="stylesheet" href="css/slicknav.css">
     <link rel="stylesheet" href="css/style.css">
      <link rel="stylesheet" href="css/responsive.css">
+    <style>
+        body {
+            font-family: Arial;
+        }
+        #myBtn {
+            display: none;
+            position: fixed;
+            bottom: 20px;
+            right: 30px;
+            z-index: 99;
+            font-size: 18px;
+            border: none;
+            outline: none;
+            background-color: #009DFF;
+            color: white;
+            cursor: pointer;
+            padding: 15px;
+            border-radius: 4px;
+        }
+
+        #myBtn:hover {
+            background-color: #555;
+        }
+    </style>
 </head>
 
 <body>
@@ -42,20 +66,9 @@
                                 <nav>
                                     <ul id="navigation">
                                         <li><a class="active" href="index.html">home</a></li>
-                                        <li><a href="rooms.html">Facility</a></li>
-                                        <li><a href="about.html">Customer</a></li>
-                                        <li><a href="#">blog <i class="ti-angle-down"></i></a>
-                                            <ul class="submenu">
-                                                <li><a href="blog.html">blog</a></li>
-                                                <li><a href="single-blog.html">single-blog</a></li>
-                                            </ul>
-                                        </li>
-                                        <li><a href="#">pages <i class="ti-angle-down"></i></a>
-                                            <ul class="submenu">
-                                                <li><a href="elements.html">elements</a></li>
-                                            </ul>
-                                        </li>
-                                        <li><a href="contact.html">contract</a></li>
+                                        <li><a href="facility.html">Facility</a></li>
+                                        <li><a href="customer.html">Customer</a></li>
+                                        <li><a href="contract.html">Contract</a></li>
                                     </ul>
                                 </nav>
                             </div>
@@ -291,6 +304,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
             </div>
         </div>
     </footer>
+    <button onclick="topFunction()" id="myBtn" title="Go to top"><i style="" class="fa-solid fa-arrow-up"></i></button>
+
 
     <!-- link that opens popup -->
 
@@ -384,6 +399,26 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
          }
 
         });
+        // Back to top
+
+        var mybutton = document.getElementById("myBtn");
+
+        window.onscroll = function () {
+            scrollFunction();
+        };
+
+        function scrollFunction() {
+            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+                mybutton.style.display = "block";
+            } else {
+                mybutton.style.display = "none";
+            }
+        }
+
+        function topFunction() {
+            document.body.scrollTop = 0;
+            document.documentElement.scrollTo ({ top: 0,behavior :"smooth"});
+        }
     </script>
 </body>
 
