--- a/case_study/furama/customer.html
+++ b/case_study/furama/customer.html
@@ -159,20 +159,14 @@
                     <td>Diamond</td>
 
                     <td>
-                        <a class="updateEmployee" data-toggle="modal"
-                           data-target="#form-update">
-                            <button class="btn btn-light">Update</button>
-                        </a>
+                            <button class="btn btn-light">
+                                Update
+                            </button>
                     </td>
                     <td>
-                        <a style="color: white" href="#"
-                           onclick="customerIndex(id, 'name')"
-                           data-toggle="modal"
-                           data-target="#delete">
                             <button class="btn btn-light">
                                 Delete
                             </button>
-                        </a>
                     </td>
                 </tr>
                 <tr>
@@ -187,20 +181,14 @@
                     <td>Platinum</td>
 
                     <td>
-                        <a class="updateEmployee" data-toggle="modal"
-                           data-target="#form-update">
-                            <button class="btn btn-light">Update</button>
-                        </a>
+                        <button class="btn btn-light">
+                            Update
+                        </button>
                     </td>
                     <td>
-                        <a style="color: white" href="#"
-                           onclick="customerIndex(id, 'name')"
-                           data-toggle="modal"
-                           data-target="#delete">
-                            <button class="btn btn-light">
-                                Delete
-                            </button>
-                        </a>
+                        <button class="btn btn-light">
+                            Delete
+                        </button>
                     </td>
                 </tr>
 
@@ -216,21 +204,14 @@
                     <td>Gold</td>
 
                     <td>
-                        <a class="updateEmployee" data-toggle="modal"
-                           data-target="#form-update">
-                            <button class="btn btn-light">Update</button>
-                        </a>
+                        <button class="btn btn-light">
+                            Update
+                        </button>
                     </td>
                     <td>
-                        <a style="color: white" href="#"
-                           onclick="customerIndex(id, 'name')"
-
-                           data-toggle="modal"
-                           data-target="#delete">
-                            <button class="btn btn-light">
-                                Delete
-                            </button>
-                        </a>
+                        <button class="btn btn-light">
+                            Delete
+                        </button>
                     </td>
                 </tr>
 
@@ -246,20 +227,14 @@
                     <td>Silver</td>
 
                     <td>
-                        <a class="updateEmployee" data-toggle="modal"
-                           data-target="#form-update">
-                            <button class="btn btn-light">Update</button>
-                        </a>
+                        <button class="btn btn-light">
+                            Update
+                        </button>
                     </td>
                     <td>
-                        <a style="color: white" href="#"
-                           onclick="customerIndex(id, 'name')"
-                           data-toggle="modal"
-                           data-target="#delete">
-                            <button class="btn btn-light">
-                                Delete
-                            </button>
-                        </a>
+                        <button class="btn btn-light">
+                            Delete
+                        </button>
                     </td>
                 </tr>
                 </tbody>
