--- a/case_study/furama/contract.html
+++ b/case_study/furama/contract.html
@@ -125,51 +125,51 @@
     <h3>Contract</h3>
 </div>
 <!-- List-->
-<div class="bg-menu table-dark table text-light font-weight-bold" style="padding-top: 100px ; color: black">
+<div class="bg-menu table table font-weight-bold" style="padding-top: 120px ; color: black">
     <div class="container-fluid body">
         <div class="center container-fluid">
-            <h1 style="text-align: center ; color: white">Danh sách hợp đồng</h1>
+            <h1 style="text-align: center ">List Contract</h1>
             <table style="border-collapse:  collapse; width: 100%" id="employeeList">
                 <thead>
                 <tr>
-                    <th class="text-center">Số hợp đồng</th>
-                    <th class="text-center">Ngày bắt đầu</th>
-                    <th class="text-center">Ngày kết thúc</th>
-                    <th class="text-center">Số tiền cọc trước</th>
-                    <th class="text-center">Tổng số tiền thanh toán</th>
+                    <th class="text-center">#</th>
+                    <th class="text-center">Time Start</th>
+                    <th class="text-center">Time End</th>
+                    <th class="text-center">Deposit Amount</th>
+                    <th class="text-center">Payment Amount</th>
                 </tr>
                 </thead>
                 <tbody>
                 <tr>
                     <td class="text-center">1</td>
-                    <td>10-08-2022</td>
-                    <td>18-08-2022</td>
-                    <td>50000</td>
-                    <td>100000</td>
+                    <td class="text-center">10-08-2022</td>
+                    <td class="text-center">18-08-2022</td>
+                    <td class="text-center">50000</td>
+                    <td class="text-center">100000</td>
                 </tr>
 
                 <tr>
                     <td class="text-center">2</td>
-                    <td>10-08-2022</td>
-                    <td>19-08-2022</td>
-                    <td>20000</td>
-                    <td>30000</td>
+                    <td class="text-center">10-08-2022</td>
+                    <td class="text-center">19-08-2022</td>
+                    <td class="text-center">20000</td>
+                    <td class="text-center">30000</td>
                 </tr>
 
                 <tr>
                     <td class="text-center">3</td>
-                    <td>10-08-2022</td>
-                    <td>20-07-2022</td>
-                    <td>40000</td>
-                    <td>100000</td>
+                    <td class="text-center">10-08-2022</td>
+                    <td class="text-center">20-07-2022</td>
+                    <td class="text-center">40000</td>
+                    <td class="text-center">100000</td>
                 </tr>
 
                 <tr>
                     <td class="text-center">4</td>
-                    <td>10-08-2022</td>
-                    <td>21-08-2022</td>
-                    <td>15000</td>
-                    <td>20000</td>
+                    <td class="text-center">10-08-2022</td>
+                    <td class="text-center">21-08-2022</td>
+                    <td class="text-center">15000</td>
+                    <td class="text-center">20000</td>
                 </tr>
                 </tbody>
             </table>
