--- a/case_study/furama/customer.html
+++ b/case_study/furama/customer.html
@@ -25,6 +25,9 @@
     <link rel="stylesheet" href="css/slicknav.css">
     <link rel="stylesheet" href="css/style.css">
     <!-- <link rel="stylesheet" href="css/responsive.css"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
     <style>
         body {
             font-family: Arial;
@@ -128,21 +131,21 @@
 <!-- about_area_start -->
 
 <!-- List-->
-<div class="bg-menu table-dark table text-light font-weight-bold" style="padding-top: 100px">
+<div class="bg-menu table table  font-weight-bold" style="padding-top: 100px">
     <div class="container-fluid body">
         <div class="center container-fluid">
-            <h1 style="text-align: center ; color: white">Danh sách khách hàng</h1>
+            <h1 style="text-align: center ">List Customer</h1>
             <table style="border-collapse:  collapse; width: 100%" id="employeeList">
                 <thead>
                 <tr>
                     <th class="text-center">#</th>
-                    <th class="text-center">Mã khách hàng</th>
-                    <th class="text-center">Tên khách hàng</th>
-                    <th class="text-center">Giới tính</th>
-                    <th class="text-center">Căn cước công dân</th>
-                    <th class="text-center">Số điện thoại</th>
-                    <th class="text-center">Địa chỉ</th>
-                    <th class="text-center">Loại khách hàng</th>
+                    <th class="text-center">Id Customer</th>
+                    <th class="text-center">Name</th>
+                    <th class="text-center">Gender</th>
+                    <th class="text-center">Identity Card</th>
+                    <th class="text-center">Phone Number</th>
+                    <th class="text-center">Address</th>
+                    <th class="text-center">Customer Type</th>
                     <th class="text-center">Update</th>
                     <th class="text-center">Delete</th>
                 </tr>
@@ -159,14 +162,38 @@
                     <td>Diamond</td>
 
                     <td>
-                            <button class="btn btn-light">
+                            <button class="btn btn-primary">
                                 Update
                             </button>
                     </td>
                     <td>
-                            <button class="btn btn-light">
-                                Delete
-                            </button>
+                        <!-- Button trigger modal -->
+                        <button type="button" class="btn btn-danger" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">
+                            Delete
+                        </button>
+
+                        <!-- Modal -->
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                             aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel">Delete Customer</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body" style="color: black">
+                                        You want delete ?
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close
+                                        </button>
+                                        <button type="button" class="btn btn-primary">Delete</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </td>
                 </tr>
                 <tr>
@@ -181,14 +208,38 @@
                     <td>Platinum</td>
 
                     <td>
-                        <button class="btn btn-light">
+                        <button class="btn btn-primary">
                             Update
                         </button>
                     </td>
                     <td>
-                        <button class="btn btn-light">
+                        <!-- Button trigger modal -->
+                        <button type="button" class="btn btn-danger" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">
                             Delete
                         </button>
+
+                        <!-- Modal -->
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                             aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel">Delete Customer</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body" style="color: black">
+                                        You want delete ?
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close
+                                        </button>
+                                        <button type="button" class="btn btn-primary">Delete</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </td>
                 </tr>
 
@@ -204,14 +255,39 @@
                     <td>Gold</td>
 
                     <td>
-                        <button class="btn btn-light">
+                        <button class="btn btn-primary">
                             Update
                         </button>
                     </td>
                     <td>
-                        <button class="btn btn-light">
+                        <!-- Button trigger modal -->
+                        <button type="button" class="btn btn-danger" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">
                             Delete
                         </button>
+
+                        <!-- Modal -->
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                             aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel">Delete Customer</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body" style="color: black">
+                                        You want delete ?
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close
+                                        </button>
+                                        <button type="button" class="btn btn-primary">Delete</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </td>
                     </td>
                 </tr>
 
@@ -227,14 +303,39 @@
                     <td>Silver</td>
 
                     <td>
-                        <button class="btn btn-light">
+                        <button class="btn btn-primary">
                             Update
                         </button>
                     </td>
                     <td>
-                        <button class="btn btn-light">
+                        <!-- Button trigger modal -->
+                        <button type="button" class="btn btn-danger" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">
                             Delete
                         </button>
+
+                        <!-- Modal -->
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                             aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel">Delete Customer</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body" style="color: black">
+                                        You want delete ?
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close
+                                        </button>
+                                        <button type="button" class="btn btn-primary">Delete</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </td>
                     </td>
                 </tr>
                 </tbody>
@@ -471,6 +572,9 @@
     };
 
 </script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
 
 
 </body>
