--- a/case_study/furama/facility.html
+++ b/case_study/furama/facility.html
@@ -24,11 +24,15 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/slicknav.css">
     <link rel="stylesheet" href="css/style.css">
-     <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/responsive.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
     <style>
         body {
             font-family: Arial;
         }
+
         #myBtn {
             display: none;
             position: fixed;
@@ -126,7 +130,7 @@
 <!-- bradcam_area_end -->
 
 <!-- offers_area_start -->
-<div class="offers_area " style="padding: 41px" >
+<div class="offers_area " style="padding: 41px">
     <div class="container">
         <div class="row">
             <div class="col-xl-4 col-md-4">
@@ -139,7 +143,36 @@
                     <ul>
                         <li>Diện tích phòng: 85.8 m</li>
                     </ul>
-                    <a href="#" class="book_now">book now</a>
+                    <div style="width: 100%">
+                        <button style="width: 49%" class="book_now">Edit</button>
+                        <!-- Button trigger modal -->
+                        <button type="button" style="width: 49%" class="book_now" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">
+                            Delete
+                        </button>
+
+                        <!-- Modal -->
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                             aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel">Delete Facility</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        You want delete ?
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close
+                                        </button>
+                                        <button type="button" class="btn btn-primary">Delete</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="col-xl-4 col-md-4">
@@ -152,7 +185,36 @@
                     <ul>
                         <li>Diện tích phòng: 40.1 m</li>
                     </ul>
-                    <a href="#" class="book_now">book now</a>
+                    <div style="width: 100%">
+                        <button style="width: 49%" class="book_now">Edit</button>
+                        <!-- Button trigger modal -->
+                        <button type="button" style="width: 49%" class="book_now" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">
+                            Delete
+                        </button>
+
+                        <!-- Modal -->
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                             aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel">Delete Facility</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        You want delete ?
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close
+                                        </button>
+                                        <button type="button" class="btn btn-primary">Delete</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="col-xl-4 col-md-4">
@@ -165,7 +227,37 @@
                     <ul>
                         <li>Diện tích phòng: 43.7 m</li>
                     </ul>
-                    <a href="#" class="book_now">book now</a>
+                    <div style="width: 100%">
+                        <button style="width: 49%" class="book_now">Edit</button>
+                        <!-- Button trigger modal -->
+                        <button type="button" style="width: 49%" class="book_now" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">
+                            Delete
+                        </button>
+
+                        <!-- Modal -->
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                             aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel">Delete Facility</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        You want delete ?
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close
+                                        </button>
+                                        <button type="button" class="btn btn-primary">Delete</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
@@ -184,7 +276,37 @@
                     <ul>
                         <li>Diện tích phòng: 85.8 m</li>
                     </ul>
-                    <a href="#" class="book_now">book now</a>
+
+                    <div style="width: 100%">
+                        <button style="width: 49%" class="book_now">Edit</button>
+                        <!-- Button trigger modal -->
+                        <button type="button" style="width: 49%" class="book_now" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">
+                            Delete
+                        </button>
+
+                        <!-- Modal -->
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                             aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel">Delete Facility</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        You want delete ?
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close
+                                        </button>
+                                        <button type="button" class="btn btn-primary">Delete</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="col-xl-4 col-md-4">
@@ -197,7 +319,37 @@
                     <ul>
                         <li>Diện tích phòng: 40.1 m</li>
                     </ul>
-                    <a href="#" class="book_now">book now</a>
+
+                    <div style="width: 100%">
+                        <button style="width: 49%" class="book_now">Edit</button>
+                        <!-- Button trigger modal -->
+                        <button type="button" style="width: 49%" class="book_now" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">
+                            Delete
+                        </button>
+
+                        <!-- Modal -->
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                             aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel">Delete Facility</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        You want delete ?
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close
+                                        </button>
+                                        <button type="button" class="btn btn-primary">Delete</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
@@ -211,22 +363,36 @@
                     <ul>
                         <li>Diện tích phòng: 43.7 m</li>
                     </ul>
-                    <a href="#" class="book_now">book now</a>
-                    <div>
-                        <!--                delete-->
-                        <a href="#"
-                           onclick="employeeIndex(id, 'name')"
-                           data-toggle="modal"
-                           data-target="#delete">
-                            <button style="float: right" class="btn btn-light">
-                                <i style=" font-size: 1.5rem" class="fa-solid fa-trash-can btn text-danger"></i>
-                            </button>
-                        </a>
 
-                        <!--                update-->
-                        <button style="float: right;" class="updateEmployee btn btn-light" data-toggle="modal"
-                                data-target="#form-update"><i style="font-size: 1.5rem"
-                                                              class="fa-solid fa-pen-to-square btn text-info"></i></button>
+                    <div style="width: 100%">
+                        <button style="width: 49%" class="book_now">Edit</button>
+                        <!-- Button trigger modal -->
+                        <button type="button" style="width: 49%" class="book_now" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">
+                            Delete
+                        </button>
+
+                        <!-- Modal -->
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                             aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel">Delete Facility</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        You want delete ?
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close
+                                        </button>
+                                        <button type="button" class="btn btn-primary">Delete</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -293,7 +459,10 @@
                 <div class="col-xl-8 col-md-7 col-lg-9">
                     <p class="copy_right">
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                        Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                        Copyright &copy;<script>document.write(new Date().getFullYear());</script>
+                        All rights reserved | This template is made with <i class="fa fa-heart-o"
+                                                                            aria-hidden="true"></i> by <a
+                            href="https://colorlib.com" target="_blank">Colorlib</a>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                 </div>
                 <div class="col-xl-4 col-md-5 col-lg-3">
@@ -433,9 +602,12 @@
 
     function topFunction() {
         document.body.scrollTop = 0;
-        document.documentElement.scrollTo ({ top: 0,behavior :"smooth"});
+        document.documentElement.scrollTo({top: 0, behavior: "smooth"});
     }
 </script>
-</body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
 
+</body>
 </html>
